--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/dollarbucks favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/dollarbucks apple icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DollarBucks</title>
   </head>
